--- a/index.html
+++ b/index.html
@@ -1,3 +1,68 @@
-<p>Hello 大家好</p>
-<p>我是霸都丶傲天，这是我的个人网站。 </p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Xiangyu Xia's Resume</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        ul {
+            list-style-type: none;
+        }
+    </style>
+</head>
+
+<body>
+
+<h1>Xiangyu Xia</h1>
+<p>+86 13241476556 | <a href="mailto:xiaxiangyu2001@outlook.com">xiaxiangyu2001@outlook.com</a></p>
+
+<h2>Education</h2>
+<ul>
+    <li>
+        <strong>Beijing City University, Beijing, China</strong><br>
+        Bachelor of Computer Science and Technology, Expected July 2023<br>
+        GPA: 3.4
+    </li>
+</ul>
+
+<h2>Research and Project Experience</h2>
+<ul>
+    <li>
+        <strong>Gate-Controlled Graph Neural Network for Program Classification</strong><br>
+        City-level Innovation Project, Beijing, China, Dec 2019 – Dec 2020
+        <ul>
+            <li>Led the project to represent the rich syntax and semantic information of the program with graph structure, and converted the program source code into an AST abstract syntax tree.</li>
+            <li>Implemented a GGNN model to understand the structure and semantic information of programs and extract code features for high-precision classification.</li>
+        </ul>
+    </li>
+
+    <li>
+        <strong>Vulnerability Detection of Source Code Based on Graph Network</strong><br>
+        National-level Innovation Project, Beijing, China, Mar 2021 – May 2022
+        <ul>
+            <li>Directed the project to convert source code into a graph containing syntax and semantic information. Trained the GGNN model for high-precision vulnerability detection.</li>
+            <li>Deployed the trained model using the Django open-source framework for accessibility through a browser, facilitating developer usage.</li>
+        </ul>
+    </li>
+
+    <li>
+        <strong>Code Summary and Interpretability of Deep Learning</strong><br>
+        Collaborative Research with CAS and ASU Professors, Online, Jun 2022 – Present
+        <ul>
+            <li>Engaged in collaborative research with Prof. Jian Liu from the Institute of Information Engineering, Chinese Academy of Sciences, and Prof. Ruoyu Wang from Arizona State University, with a focus on code summarization and the interpretability of deep learning.</li>
+            <li>Successfully replicated and reviewed numerous academic papers on code summarization to deepen understanding of the latest advancements and challenges within the field.</li>
+            <li>Participated in weekly meetings for progress reports and collaborative discussions to further research development.</li>
+        </ul>
+    </li>
+</ul>
+
+<h2>Skills</h2>
+<ul>
+    <li>Programming Languages: Python, Java, C++</li>
+    <li>Tools and Technologies: GGNN, PyTorch, MindSpore, Django</li>
+</ul>
+
+</body>
+</html>
