--- a/index.html
+++ b/index.html
@@ -58,6 +58,39 @@
     </li>
 </ul>
 
+<h2>Publications</h2>
+<ul>
+    <li>
+        <strong>Deep Learning Framework Mindspore and Pytorch Comparison</strong><br>
+        First author, Regular conference WJCI
+        <ul>
+            <li>In this paper, we perform analytical and experimental analysis to reveal the comparison of training speed of MIndSpore and PyTorch on a single GPU.</li>
+        </ul>
+    </li>
+    <li>
+        <strong>A Vulnerability Detection Approach Based on Comparative Learning</strong><br>
+        Third author, EI indexed
+        <ul>
+            <li>The deep learning model trained based on the data set and the proposed learning approach in the paper can identify 150 CWE vulnerabilities with an accuracy of 92\%, an average PR value of 0.84 and an average ROC-AUC value of 0.96.</li>
+        </ul>
+    </li>
+    <li>
+        <strong>Multi-sample Comparison and Fusion of Multi-type Vulnerability Detection Method and System</strong><br>
+        Fourth inventor
+        <ul>
+            <li>The patent technology of this invention can reduce the complexity of the model and improve the ability and accuracy of the model to identify vulnerabilities.</li>
+        </ul>
+    </li>
+</ul>
+
+<h2>Awards</h2>
+<ul>
+    <li>
+        <strong>National College Student Mathematics Modeling Competition</strong><br>
+        Second Prize in Beijing City
+    </li>
+</ul>
+
 <h2>Skills</h2>
 <ul>
     <li>Programming Languages: Python, Java, C++</li>
