--- a/index.html
+++ b/index.html
@@ -136,7 +136,88 @@
     </div>
 
     <div id="chinese">
-        <!-- 在这里添加中文简历内容，将英文内容翻译成中文 -->
+        <h1>夏翔宇</h1>
+        <p>+86 13241476556 | <a href="mailto:xiaxiangyu2001@outlook.com">xiaxiangyu2001@outlook.com</a></p>
+
+        <h2>教育经历</h2>
+        <ul>
+            <li>
+                <strong>北京城市学院, 北京, 中国</strong><br>
+                计算机科学与技术学士, 预期 2023 年 7 月毕业<br>
+                GPA: 3.4
+            </li>
+        </ul>
+
+        <h2>研究和项目经验</h2>
+        <ul>
+            <li>
+                <strong>用于程序分类的门控图神经网络</strong><br>
+                市级创新项目, 北京, 中国, 2019 年 12 月 - 2020 年 12 月
+                <ul>
+                    <li>领导了这个项目，以图结构表示程序的丰富语法和语义信息，并将程序源代码转化为 AST 抽象语法树。</li>
+                    <li>实现了一个 GGNN 模型，用于理解程序的结构和语义信息，并提取代码特征以进行高精度分类。</li>
+                </ul>
+            </li>
+
+            <li>
+                <strong>基于图网络的源代码漏洞检测</strong><br>
+                国家级创新项目, 北京, 中国, 2021 年 3 月 - 2022 年 5 月
+                <ul>
+                    <li>指导了这个项目，将源代码转化为包含语法和语义信息的图。训练 GGNN 模型进行高精度的漏洞检测。</li>
+                    <li>使用 Django 开源框架部署了训练的模型，以便通过浏览器进行访问，方便开发者使用。</li>
+                </ul>
+            </li>
+
+            <li>
+                <strong>代码摘要和深度学习的可解释性</strong><br>
+                与 CAS 和 ASU 教授的协作研究, 在线, 2022 年 6 月 - 现在
+                <ul>
+                    <li>与中国科学院信息工程研究所的刘剑教授以及亚利桑那州立大学的王若愚教授共同参与研究，研究方向为代码摘要和深度学习的可解释性。</li>
+                    <li>成功复现了多篇关于代码摘要的学术论文，深化了对领域内最新进展和挑战的理解。</li>
+                    <li>参加了每周的会议，进行进度报告和协作讨论，进一步推动研究的发展。</li>
+                </ul>
+            </li>
+        </ul>
+
+        <h2>出版物</h2>
+        <ul>
+            <li>
+                <strong>深度学习框架 Mindspore 与 Pytorch 的比较</strong><br>
+                第一作者, 正规会议 WJCI
+                <ul>
+                    <li>在这篇论文中，我们进行了分析和实验分析，揭示了 MindSpore 和 PyTorch 在单个 GPU 上的训练速度的比较。</li>
+                </ul>
+            </li>
+            <li>
+                <strong>基于比较学习的漏洞检测方法</strong><br>
+                第三作者, EI 索引
+                <ul>
+                    <li>在论文中提出的基于数据集和学习方法训练的深度学习模型可以识别 150 个 CWE 漏洞，准确率为 92%，平均 PR 值为 0.84，平均 ROC-AUC 值为 0.96。</li>
+                </ul>
+            </li>
+            <li>
+                <strong>多样本比较和融合的多类型漏洞检测方法和系统</strong><br>
+                第四发明人
+                <ul>
+                    <li>这项发明的专利技术可以降低模型的复杂性，并提高模型识别漏洞的能力和精度。</li>
+                </ul>
+            </li>
+        </ul>
+
+        <h2>获奖情况</h2>
+        <ul>
+            <li>
+                <strong>全国大学生数学建模竞赛</strong><br>
+                获得北京市二等奖（论文撰写者）
+            </li>
+        </ul>
+
+        <h2>技能</h2>
+        <ul>
+            <li>编程语言：Python，Java，C++</li>
+            <li>工具和技术：GGNN，PyTorch，MindSpore，Django</li>
+        </ul>
+    
     </div>
 
 </div>
