--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <h2>Awards</h2>
         <ul>
             <li>
-                <strong>National College Student Mathematics Modeling Competition</strong><br>
+                <strong>China Undergraduate Mathematical Contest in Modelling</strong><br>
                 Second Prize in Beijing City
             </li>
         </ul>
