--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h2>Research and Project Experience</h2>
         <ul>
             <li>
-                <strong>Gate-Controlled Graph Neural Network for Program Classification</strong><br>
+                <strong>Gate Graph Neural Network for Program Classification</strong><br>
                 City-level Innovation Project, Beijing, China, Dec 2019 – Dec 2020
                 <ul>
                     <li>Led the project to represent the rich syntax and semantic information of the program with graph structure, and converted the program source code into an AST abstract syntax tree.</li>
