--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Xiangyu Xia's Resume</title>
+    <title>Xiangyu Xia's CV</title>
     <style>
         body {
             font-family: Arial, sans-serif;
