--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <strong>A Vulnerability Detection Approach Based on Comparative Learning</strong><br>
                 Third author, EI indexed
                 <ul>
-                    <li>The deep learning model trained based on the data set and the proposed learning approach in the paper can identify 150 CWE vulnerabilities with an accuracy of 92\%, an average PR value of 0.84 and an average ROC-AUC value of 0.96.</li>
+                    <li>The deep learning model trained based on the data set and the proposed learning approach in the paper can identify 150 CWE vulnerabilities with an accuracy of 92%, an average PR value of 0.84 and an average ROC-AUC value of 0.96.</li>
                 </ul>
             </li>
             <li>
