--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
 
   gtag('config', 'G-4HP10M2YRZ');
 </script>
+ <script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?91487921ce2cef2ab6d5212e6e1d901f";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 </head>
 
 <body>
